# llama.cpp

./: Doxyfile  convert_hf_to_gguf.py  gen-exaone4.sh  generate_docs.sh
_app/: exaone4-test.ipynb  exaone4-tool.http  exaone4.http  safe-test.ipynb
_models/: load_base64.py  load_image_call_llm.py  sqlite_llama_mcp_agent.py  test.http  test2.http  test3.http  test_base64_image.http  test_image.http  test_image_base64.http  test_image_url_multi.http  video_edit.ipynb
common/: arg.cpp  common.h
docs/: README.md
examples/: CMakeLists.txt
examples/llama-dbus/: CMakeLists.txt  llama-dbus-client.cpp  llama-dbus.cpp
examples/llava/: CMakeLists.txt  mtmd-cli.cpp  mtmd.cpp
examples/llava-webcam/: CMakeLists.txt  webcam_capture.cpp  webcam_llava.cpp
examples/rpc/: CMakeLists.txt  rpc-server.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml-backend.h  ggml.h
ggml/src/: CMakeLists.txt
ggml/src/ggml-opencl/: ggml-opencl.cpp
ggml/src/ggml-opencl/kernels/: argsort.cl  cvt.cl  gemm_moe_mxfp4_f32.cl  gemv_moe_mxfp4_f32.cl  gemv_noshuffle.cl  gemv_noshuffle_general.cl  group_norm.cl  mul_mat_Ab_Bi_8x4.cl  mul_mv_f16_f16.cl  mul_mv_f16_f32.cl  mul_mv_f16_f32_1row.cl  mul_mv_f16_f32_l4.cl  mul_mv_f32_f32.cl  mul_mv_id_mxfp4_f32.cl  mul_mv_id_mxfp4_f32_flat.cl  mul_mv_id_q4_0_f32_8x_flat.cl  mul_mv_id_q8_0_f32.cl  mul_mv_id_q8_0_f32_flat.cl  mul_mv_mxfp4_f32.cl  mul_mv_mxfp4_f32_flat.cl  mul_mv_q4_0_f32.cl  mul_mv_q4_0_f32_1d_16x_flat.cl  mul_mv_q4_0_f32_1d_8x_flat.cl  mul_mv_q4_0_f32_8x_flat.cl  mul_mv_q4_0_f32_v.cl  mul_mv_q6_k.cl  mul_mv_q8_0_f32.cl  mul_mv_q8_0_f32_flat.cl  norm.cl  rms_norm.cl  softmax_4_f16.cl  softmax_4_f32.cl  softmax_f16.cl  softmax_f32.cl  tanh.cl
ggml/src/ggml-vulkan/: CMakeLists.txt
ggml/src/vulkan-shaders/: CMakeLists.txt
gguf-py/gguf/: constants.py  tensor_mapping.py
include/: llama.h
samples/dbus-mtmd/: CMakeLists.txt  dbus-cmds.md  llme_service.cpp  llme_service.hpp  main.cpp  models.json  requirements.md  test_queryimage.cpp
src/: llama-arch.cpp  llama-arch.h  llama-model.cpp  llama-vocab.cpp
tools/mtmd/: mtmd.h
